--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,322 +20,28 @@
    <string>Qt 5.4 OpenGL 3.3</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="OpenGLWidget" name="openGLWidget">
-    <property name="geometry">
-     <rect>
-      <x>9</x>
-      <y>8</y>
-      <width>421</width>
-      <height>391</height>
-     </rect>
-    </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="focusPolicy">
-     <enum>Qt::StrongFocus</enum>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="checkBoxDiagonal">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>9</x>
-      <y>410</y>
-      <width>193</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Change square diagonal</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="checkBox">
-    <property name="geometry">
-     <rect>
-      <x>9</x>
-      <y>440</y>
-      <width>166</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Black background</string>
-    </property>
-    <property name="checked">
-     <bool>false</bool>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="exitButton">
-    <property name="geometry">
-     <rect>
-      <x>9</x>
-      <y>530</y>
-      <width>85</width>
-      <height>27</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Exit</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="centralizeBox">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>230</x>
-      <y>410</y>
-      <width>97</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Centralize</string>
-    </property>
-    <property name="checkable">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="scaleBox">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>230</x>
-      <y>440</y>
-      <width>141</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Scale the object</string>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="shadersBox">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>530</y>
-      <width>271</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <item>
-     <property name="text">
-      <string>Flat Shader</string>
-     </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="OpenGLWidget" name="openGLWidget">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="focusPolicy">
+       <enum>Qt::StrongFocus</enum>
+      </property>
+     </widget>
     </item>
-    <item>
-     <property name="text">
-      <string>Gouraud Shader</string>
-     </property>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="exitButton">
+      <property name="text">
+       <string>Exit</string>
+      </property>
+     </widget>
     </item>
-    <item>
-     <property name="text">
-      <string>Phong Shader</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Cartoon Shader</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>HalfWayPhong Shader </string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Texture Shader</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Normal Shader</string>
-     </property>
-    </item>
-   </widget>
-   <widget class="QDial" name="dial_R">
-    <property name="geometry">
-     <rect>
-      <x>440</x>
-      <y>40</y>
-      <width>50</width>
-      <height>64</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>100</number>
-    </property>
-    <property name="singleStep">
-     <number>5</number>
-    </property>
-   </widget>
-   <widget class="QDial" name="dial_G">
-    <property name="geometry">
-     <rect>
-      <x>500</x>
-      <y>40</y>
-      <width>50</width>
-      <height>64</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>100</number>
-    </property>
-    <property name="singleStep">
-     <number>5</number>
-    </property>
-   </widget>
-   <widget class="QDial" name="dial_B">
-    <property name="geometry">
-     <rect>
-      <x>560</x>
-      <y>40</y>
-      <width>50</width>
-      <height>64</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>100</number>
-    </property>
-    <property name="singleStep">
-     <number>5</number>
-    </property>
-   </widget>
-   <widget class="QSlider" name="lightSlider">
-    <property name="geometry">
-     <rect>
-      <x>440</x>
-      <y>140</y>
-      <width>171</width>
-      <height>19</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>100</number>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>440</x>
-      <y>110</y>
-      <width>67</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Light</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>440</x>
-      <y>20</y>
-      <width>67</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Colour</string>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="objectsBox">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>490</y>
-      <width>271</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <item>
-     <property name="text">
-      <string>Armadillo</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Beetle</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Bunny</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Camel</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Elephant</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Elk</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Mannequin</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Mushroom</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Pear</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Pig</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Sphere</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Torus</string>
-     </property>
-    </item>
-   </widget>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -343,7 +49,7 @@
      <x>0</x>
      <y>0</y>
      <width>625</width>
-     <height>23</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -448,22 +154,6 @@
    </hints>
   </connection>
   <connection>
-   <sender>checkBox</sender>
-   <signal>clicked(bool)</signal>
-   <receiver>openGLWidget</receiver>
-   <slot>toggleBackgroundColor(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>264</x>
-     <y>481</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>264</x>
-     <y>255</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>actionA_bout</sender>
    <signal>triggered()</signal>
    <receiver>MainWindow</receiver>
@@ -476,182 +166,6 @@
     <hint type="destinationlabel">
      <x>264</x>
      <y>278</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>checkBoxDiagonal</sender>
-   <signal>clicked(bool)</signal>
-   <receiver>openGLWidget</receiver>
-   <slot>changeDiagonal(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>264</x>
-     <y>453</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>264</x>
-     <y>241</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>action_Open</sender>
-   <signal>triggered()</signal>
-   <receiver>openGLWidget</receiver>
-   <slot>showFileOpenDialog()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>264</x>
-     <y>241</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>openGLWidget</sender>
-   <signal>statusBarMessage(QString)</signal>
-   <receiver>statusBar</receiver>
-   <slot>showMessage(QString)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>264</x>
-     <y>241</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>264</x>
-     <y>545</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>centralizeBox</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>openGLWidget</receiver>
-   <slot>centralizeObject(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>278</x>
-     <y>460</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>219</x>
-     <y>243</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>scaleBox</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>openGLWidget</receiver>
-   <slot>scaleObject(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>300</x>
-     <y>490</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>219</x>
-     <y>243</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>shadersBox</sender>
-   <signal>activated(int)</signal>
-   <receiver>openGLWidget</receiver>
-   <slot>changeShader(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>452</x>
-     <y>518</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>219</x>
-     <y>239</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>dial_R</sender>
-   <signal>sliderMoved(int)</signal>
-   <receiver>openGLWidget</receiver>
-   <slot>Rchanged(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>464</x>
-     <y>77</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>219</x>
-     <y>239</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>dial_G</sender>
-   <signal>sliderMoved(int)</signal>
-   <receiver>openGLWidget</receiver>
-   <slot>Gchanged(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>524</x>
-     <y>77</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>219</x>
-     <y>239</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>dial_B</sender>
-   <signal>sliderMoved(int)</signal>
-   <receiver>openGLWidget</receiver>
-   <slot>Bchanged(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>584</x>
-     <y>77</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>219</x>
-     <y>239</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>lightSlider</sender>
-   <signal>sliderMoved(int)</signal>
-   <receiver>openGLWidget</receiver>
-   <slot>lightChanged(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>525</x>
-     <y>185</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>219</x>
-     <y>239</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>objectsBox</sender>
-   <signal>activated(int)</signal>
-   <receiver>openGLWidget</receiver>
-   <slot>loadNewObjects(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>475</x>
-     <y>538</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>219</x>
-     <y>239</y>
     </hint>
    </hints>
   </connection>
