added the grass texture

--- a/resources.qrc
+++ b/resources.qrc
@@ -21,5 +21,6 @@
         <file>texture_01.jpg</file>
         <file>texture_02.png</file>
         <file>sky.jpg</file>
+        <file>grass.jpg</file>
     </qresource>
 </RCC>
